Update script.js to calculate last problem inputted and output display is limited to prevent overflow.

--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 body {
     display: flex;
     flex-direction: column;
-    gap: 100px;
-    justify-content: center;
     align-items: center;
     text-align: center;
 
+    height: 100vh;
     background: whitesmoke;
     margin: 0;
 }
@@ -15,6 +14,13 @@ header {
     background-color: grey;
     align-self: stretch;
     color: white;
+}
+
+#content {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #calculator-container {
